# haskeleton

./: README.md  foo.cabal
exec/: Main.hs
test/: Main.hs
