name:                foo
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  build-depends:     base
  exposed-modules:   Foo

executable exec
  hs-source-dirs:    exec
  main-is:           Main.hs
  build-depends:     base
                   , foo

test-suite spec
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , HUnit
                   , foo
